--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,7 @@
 MONGODB_URI=mongodb+srv://raiyantrimax:123789456@programme.u8svjct.mongodb.net/car-rental-app?retryWrites=true&w=majority
 
 PORT=5000
+
+CLOUDINARY_CLOUD_NAME=dwquuek9f
+CLOUDINARY_API_KEY=642898771256485
+CLOUDINARY_API_SECRET=**********
