--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,7 @@ PORT=5000
 CLOUDINARY_CLOUD_NAME=dwquuek9f
 CLOUDINARY_API_KEY=642898771256485
 CLOUDINARY_API_SECRET=8XJ_5zSwY4rOO00pUMQIaF3ihI8
+
+EMAIL_SERVICE=gmail
+EMAIL_USER=kamagra24online@gmail.com
+EMAIL_PASSWORD=qvcglqakciodanbb
