--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.12",
     "twilio": "^5.8.0"
   }
 }
