feat: Enhance email configuration and add email setup guide for Render hosting

--- a/server/.env.example
+++ b/server/.env.example
@@ -12,6 +12,7 @@ JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 BCRYPT_SALT_ROUNDS=10
 
 # Email Configuration for OTP
+# Option 1: Use email service (Gmail, Yahoo, Outlook, etc.)
 EMAIL_SERVICE=gmail
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASSWORD=your-app-specific-password
@@ -21,11 +22,18 @@ EMAIL_PASSWORD=your-app-specific-password
 # 2. Generate App Password: https://myaccount.google.com/apppasswords
 # 3. Use the generated app password in EMAIL_PASSWORD
 
-# Other email services supported:
-# - gmail, yahoo, outlook, hotmail, icloud, etc.
-# Or use custom SMTP:
-# EMAIL_HOST=smtp.example.com
+# Option 2: Use custom SMTP (recommended for production)
+# EMAIL_HOST=smtp.sendgrid.net
 # EMAIL_PORT=587
+# EMAIL_SECURE=false
+# EMAIL_USER=apikey
+# EMAIL_PASSWORD=your-sendgrid-api-key
+
+# Popular SMTP services for production:
+# - SendGrid: smtp.sendgrid.net:587
+# - Mailgun: smtp.mailgun.org:587
+# - AWS SES: email-smtp.us-east-1.amazonaws.com:587
+# - Brevo (Sendinblue): smtp-relay.brevo.com:587
 
 # Cloudinary (if using)
 CLOUDINARY_CLOUD_NAME=your_cloud_name
